--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 html {
   box-sizing: border-box;
   width: 100vw;
@@ -128,7 +127,7 @@ img {
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   grid-gap: 16px;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 20px;
   padding: 0;
   list-style: none;
   margin-left: auto;
